--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+.outside-container 
+    height: 100vh
+    justify-content: center
+    align-items: center
+    display: flex
