auth guard finished

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,11 +7,11 @@
                         <form [formGroup]="loginForm" class="mb-3 mt-3 md-4">
                             <h2 class="fw-bold mb-4">BUILDERS WEATHER APP</h2> <!--CHANGE LATER-->
                             <div class="mb-3">
-                                <label for="text" class="form-label">Username</label>
+                                <label for="text" class="form-label">USERNAME</label>
                                 <input type="text" class="form-control" id="text" placeholder="Enter your username" formControlName="username">
                             </div>
                             <div class="mb-3">
-                                <label for="password" class="form-label">Password</label>
+                                <label for="password" class="form-label">PASSWORD</label>
                                 <input type="password" class="form-control" id="password" placeholder="Enter your password" formControlName="password">
                             </div> <!--PUT THE MAGIC EYE-->
                             <div class="mt-4 d-grid">
