--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,16 @@
-.outside-container 
-    height: 100vh
+@mixin position
     justify-content: center
-    align-items: center
     display: flex
+
+
+.positioner
+    @include position
+
+
+.outside-container 
+    @include position
+    height: 100vh
+    align-items: center
+   
+body 
+    overflow: hidden !important
